# agents

./: .gitignore  README.md
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml
desafio-1-assistente-dados/: .env.example  .gitignore  README.md  pyproject.toml
desafio-1-assistente-dados/src/: app.py  cli.py
desafio-1-assistente-dados/src/agent/: graph.py  helpers.py  prompts.py  state.py  tools.py
desafio-1-assistente-dados/src/db/: connection.py
desafio-1-assistente-dados/src/viz/: chart_picker.py
desafio-1-assistente-dados/tests/: test_agent_helpers.py
desafio-2-pipeline-documentos/: .env.example  .gitignore  README.md  pyproject.toml
desafio-2-pipeline-documentos/src/: config.py  main.py
desafio-2-pipeline-documentos/src/pipeline/: classify.py  ingest.py  llm_utils.py  persist.py  router.py  schemas.py
desafio-2-pipeline-documentos/src/pipeline/extractors/: __init__.py  base.py  contrato.py  nota_fiscal.py  relatorio.py
desafio-2-pipeline-documentos/tests/: test_llm_utils.py
docs/: ARCHITECTURE.md  DELIVERY_EVIDENCE.md
scripts/: materialize_assets.py  smoke_desafio_1.py  smoke_desafio_2.py
